--- a/GuidingVerse/server/package.json
+++ b/GuidingVerse/server/package.json
@@ -5,12 +5,15 @@
   "license": "MIT",
   "author": "Kody",
   "type": "module",
-  "main": "server.js",
+  "main": "src/server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node src/server.js",
+    "start:dev": "node --watch src/server.js"
   },
   "dependencies": {
     "concurrently": "^9.1.2",
+    "cors": "^2.8.5",
     "express": "^5.1.0"
   }
 }
