--- a/GuidingVerse/server/package.json
+++ b/GuidingVerse/server/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@google-cloud/aiplatform": "^4.1.0",
+    "bcryptjs": "^3.0.2",
     "concurrently": "^9.1.2",
     "cors": "^2.8.5",
     "express": "^5.1.0",
