--- a/GuidingVerse/server/package.json
+++ b/GuidingVerse/server/package.json
@@ -1,22 +1,38 @@
 {
-  "name": "server",
+  "name": "guidingverse-server",
   "version": "1.0.0",
-  "description": "Backend API server for GuidingVerse to serve Bible data",
-  "license": "MIT",
-  "author": "Kody",
-  "type": "module",
-  "main": "src/server.js",
+  "description": "Server for GuidingVerse Bible application",
+  "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/server.js",
-    "start:dev": "node --watch src/server.js"
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js",
+    "test": "jest",
+    "lint": "eslint .",
+    "build": "babel src -d dist",
+    "start:prod": "NODE_ENV=production node dist/index.js",
+    "postinstall": "npm run build"
   },
   "dependencies": {
-    "@google-cloud/aiplatform": "^4.1.0",
-    "bcryptjs": "^3.0.2",
-    "concurrently": "^9.1.2",
+    "bcryptjs": "^2.4.3",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
-    "express": "^5.1.0",
-    "mongoose": "^8.13.2"
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "express-rate-limit": "^5.5.0",
+    "helmet": "^4.6.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^6.0.12",
+    "winston": "^3.3.3"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.16.0",
+    "@babel/core": "^7.16.0",
+    "@babel/preset-env": "^7.16.0",
+    "eslint": "^8.1.0",
+    "jest": "^27.3.1",
+    "nodemon": "^2.0.14"
+  },
+  "engines": {
+    "node": ">=14.0.0"
   }
 }
