--- a/GuidingVerse/server/package.json
+++ b/GuidingVerse/server/package.json
@@ -27,17 +27,17 @@
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.0",
-    "winston": "^3.11.0"
-  },
-  "devDependencies": {
+    "winston": "^3.11.0",
+    "rimraf": "^5.0.0",
+    "copyfiles": "^2.4.1",
     "@babel/cli": "^7.24.0",
     "@babel/core": "^7.24.0",
-    "@babel/preset-env": "^7.24.0",
+    "@babel/preset-env": "^7.24.0"
+  },
+  "devDependencies": {
     "eslint": "^8.57.0",
     "jest": "^29.7.0",
-    "nodemon": "^3.1.0",
-    "rimraf": "^5.0.0",
-    "copyfiles": "^2.4.1"
+    "nodemon": "^3.1.0"
   },
   "engines": {
     "node": ">=22.0.0"
