--- a/GuidingVerse/server/package.json
+++ b/GuidingVerse/server/package.json
@@ -10,7 +10,7 @@
     "test": "jest",
     "lint": "eslint .",
     "build:client": "cd ../ && npm run build",
-    "clean:server": "rimraf dist public",
+    "clean:server": "npx rimraf dist public",
     "copy:client": "copyfiles -u 1 ../dist/**/* public/",
     "build:server": "babel src -d dist --copy-files",
     "build": "npm run clean:server && npm run build:client && npm run copy:client && npm run build:server",
