--- a/GuidingVerse/package.json
+++ b/GuidingVerse/package.json
@@ -15,7 +15,9 @@
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.5.0"
+    "react-router-dom": "^7.5.0",
+    "vite": "^5.4.1",
+    "terser": "^5.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
@@ -27,9 +29,7 @@
     "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
-    "globals": "^15.9.0",
-    "vite": "^5.4.1",
-    "terser": "^5.0.0"
+    "globals": "^15.9.0"
   },
   "engines": {
     "node": ">=22.0.0"
