changed copyfiles to npx

--- a/GuidingVerse/server/package.json
+++ b/GuidingVerse/server/package.json
@@ -11,7 +11,7 @@
     "lint": "eslint .",
     "build:client": "cd ../ && npm install && npm run build",
     "clean:server": "npx rimraf dist public",
-    "copy:client": "copyfiles -u 1 ../dist/**/* public/",
+    "copy:client": "npx copyfiles -u 1 ../dist/**/* public/",
     "build:server": "babel src -d dist --copy-files",
     "build": "npm run clean:server && npm run build:client && npm run copy:client && npm run build:server",
     "start:prod": "NODE_ENV=production node dist/server.js",
