--- a/GuidingVerse/server/package.json
+++ b/GuidingVerse/server/package.json
@@ -13,7 +13,8 @@
     "clean:server": "npx rimraf dist public",
     "copy:client": "cp -r ../dist/* public/",
     "build:server": "npx babel src -d dist --copy-files",
-    "build": "npm run clean:server && mkdir public && npm run build:client && npm run copy:client && npm run build:server",
+    "copy:data": "cp -r data dist/data",
+    "build": "npm run clean:server && mkdir public && npm run build:client && npm run copy:client && npm run build:server && npm run copy:data",
     "start:prod": "NODE_ENV=production node dist/server.js",
     "postinstall": "echo \"Skipping postinstall build during deployment\""
   },
