--- a/GuidingVerse/server/package.json
+++ b/GuidingVerse/server/package.json
@@ -14,7 +14,7 @@
     "copy:client": "cp -r ../dist/* public/",
     "build:server": "npx babel src -d dist --copy-files",
     "copy:data": "cp -r data dist/data",
-    "build": "npm run clean:server && mkdir public && npm run build:client && npm run copy:client && npm run build:server && npm run copy:data",
+    "build": "npm run clean:server && mkdir public && npm run build:client && npm run copy:client && npm run build:server && npm run copy:data && echo '--- Contents of dist after data copy: ---' && ls -la dist && echo '--- Contents of dist/data after data copy: ---' && ls -la dist/data && echo '--- End of dist/data contents ---'",
     "start:prod": "NODE_ENV=production node dist/server.js",
     "postinstall": "echo \"Skipping postinstall build during deployment\""
   },
