--- a/GuidingVerse/package.json
+++ b/GuidingVerse/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "dev:all": "concurrently --kill-others \"npm run dev\" \"npm run start:dev --prefix server\""
+    "dev:all": "concurrently --kill-others \"npm run dev\" \"npm run dev --prefix server\""
   },
   "dependencies": {
     "dompurify": "^3.2.5",
