--- a/GuidingVerse/server/package.json
+++ b/GuidingVerse/server/package.json
@@ -6,14 +6,14 @@
   "type": "module",
   "scripts": {
     "start": "node dist/server.js",
-    "dev": "nodemon src/server.js",
+    "dev": "nodemon --env-file=.env.development src/server.js",
     "test": "jest",
     "lint": "eslint .",
     "build:client": "cd ../ && npm install --include=dev && npm run build",
     "clean:server": "npx rimraf dist public",
     "copy:client": "cp -r ../dist/* public/",
     "build:server": "npx babel src -d dist --copy-files",
-    "copy:data": "cp -r data/* dist/data/",
+    "copy:data": "cp -r data/* dist/data/ && cp data/verse_list.json dist/data/",
     "build": "npm run clean:server && mkdir public && npm run build:client && npm run copy:client && npm run build:server && npm run copy:data",
     "start:prod": "NODE_ENV=production node dist/server.js",
     "postinstall": "echo \"Skipping postinstall build during deployment\""
