--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@google-cloud/aiplatform": "^4.1.0",
     "@google/generative-ai": "^0.24.0",
-    "dotenv": "^16.4.7"
+    "dotenv": "^16.4.7",
+    "web-push": "^3.6.7"
   }
 }
