--- a/GuidingVerse/server/package.json
+++ b/GuidingVerse/server/package.json
@@ -40,7 +40,8 @@
   "devDependencies": {
     "eslint": "^8.57.0",
     "jest": "^29.7.0",
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "prettier": "^3.5.3"
   },
   "engines": {
     "node": ">=22.0.0"
