--- a/GuidingVerse/package.json
+++ b/GuidingVerse/package.json
@@ -16,8 +16,9 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.5.0",
-    "vite": "^5.4.1",
-    "terser": "^5.0.0"
+    "socket.io-client": "^4.7.5",
+    "terser": "^5.0.0",
+    "vite": "^5.4.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
