--- a/GuidingVerse/server/package.json
+++ b/GuidingVerse/server/package.json
@@ -34,6 +34,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.0",
     "rimraf": "^5.0.0",
+    "socket.io": "^4.7.5",
     "web-push": "^3.6.7",
     "winston": "^3.11.0"
   },
