--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@google-cloud/aiplatform": "^4.1.0",
     "@google/generative-ai": "^0.24.0",
     "dotenv": "^16.4.7",
+    "react-toastify": "^11.0.5",
     "web-push": "^3.6.7"
   }
 }
