--- a/GuidingVerse/package.json
+++ b/GuidingVerse/package.json
@@ -16,6 +16,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.5.0",
+    "react-toastify": "^9.1.3",
     "socket.io-client": "^4.7.5",
     "terser": "^5.0.0",
     "vite": "^5.4.1"
